# cpp-modules

./: CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
src/: factory.ixx  main.cpp  math.ixx
